// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDmn tests should create a text field and a label 1`] = `
<span
  class="pf-v5-c-form__label-text"
>
  name
</span>
`;

exports[`FormDmn tests should have placeholder 1`] = `
<span
  class="pf-v5-c-select__toggle-text"
>
  Select...
</span>
`;

exports[`FormDmn tests should remove require parameter 1`] = `
<div>
  <div
    data-testid="form-base"
  >
    <form
      class="pf-v5-c-form"
      data-testid="base-form"
      novalidate=""
    >
      <div>
        <div
          class="pf-v5-c-form__group"
          data-testid="wrapper-field"
        >
          <div
            class="pf-v5-c-form__group-label"
          >
            <label
              class="pf-v5-c-form__label"
              for="uniforms-0007-0001"
            >
              <span
                class="pf-v5-c-form__label-text"
              >
                name
              </span>
            </label>
             
          </div>
          <div
            class="pf-v5-c-form__group-control"
          >
            <span
              class="pf-v5-c-form-control"
            >
              <input
                aria-invalid="false"
                aria-label="uniforms text field"
                data-ouia-component-id="OUIA-Generated-TextInputBase-22"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                data-testid="text-field"
                id="uniforms-0007-0001"
                name="name"
                placeholder=""
                type="text"
                value=""
              />
            </span>
            <div
              class="pf-v5-c-form__helper-text"
            >
              <div
                class="pf-v5-c-helper-text"
              >
                <div
                  class="pf-v5-c-helper-text__item"
                >
                  <span
                    class="pf-v5-c-helper-text__item-text"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormDmn tests should render the DMN Form 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-v5-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0000-0001"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-1"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0000-0001"
              name="name"
              placeholder=""
              type="text"
              value="Kogito"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0000-0003"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0000-0003"
              name="lastName"
              placeholder=""
              type="text"
              value="Tooling"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0000-0005"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-3"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0000-0005"
              name="daysAndTimeDuration"
              placeholder=""
              type="text"
              value="P1D"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0000-0007"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-4"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0000-0007"
              name="yearsAndMonthDuration"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should submit the formInputs 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-v5-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0001-0001"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-5"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0001-0001"
              name="name"
              placeholder=""
              type="text"
              value="Kogito"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0001-0003"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-6"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0001-0003"
              name="lastName"
              placeholder=""
              type="text"
              value="Tooling"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0001-0005"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-7"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0001-0005"
              name="daysAndTimeDuration"
              placeholder=""
              type="text"
              value="P1D"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0001-0007"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-8"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0001-0007"
              name="yearsAndMonthDuration"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should validate the formInputs - invalid 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-v5-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0004-0001"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-17"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0004-0001"
              name="name"
              placeholder=""
              type="text"
              value="Kogito"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0004-0003"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-18"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0004-0003"
              name="lastName"
              placeholder=""
              type="text"
              value="Tooling"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0004-0005"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control pf-m-error"
          >
            <input
              aria-invalid="true"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-19"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0004-0005"
              name="daysAndTimeDuration"
              placeholder=""
              type="text"
              value="p"
            />
            <span
              class="pf-v5-c-form-control__utilities"
            >
              <span
                class="pf-v5-c-form-control__icon pf-m-status"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item pf-m-error"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                >
                  should match format P1D(ays)T2H(ours)3M(inutes)1S(econds)
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0004-0007"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-20"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0004-0007"
              name="yearsAndMonthDuration"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests should validate the formInputs - success 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-v5-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0003-0001"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-13"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0003-0001"
              name="name"
              placeholder=""
              type="text"
              value="Kogito"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0003-0003"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-14"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0003-0003"
              name="lastName"
              placeholder=""
              type="text"
              value="Tooling"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0003-0005"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-15"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0003-0005"
              name="daysAndTimeDuration"
              placeholder=""
              type="text"
              value="P1D"
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0003-0007"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-16"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0003-0007"
              name="yearsAndMonthDuration"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDmn tests shouldn't submit the formInputs 1`] = `
<div
  data-testid="form-base"
>
  <form
    class="pf-v5-c-form"
    data-testid="base-form"
    novalidate=""
  >
    <div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0002-0001"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              name
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-9"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0002-0001"
              name="name"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0002-0003"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              lastName
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-10"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0002-0003"
              name="lastName"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0002-0005"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              daysAndTimeDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control pf-m-error"
          >
            <input
              aria-invalid="true"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-11"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0002-0005"
              name="daysAndTimeDuration"
              placeholder=""
              type="text"
              value="p"
            />
            <span
              class="pf-v5-c-form-control__utilities"
            >
              <span
                class="pf-v5-c-form-control__icon pf-m-status"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item pf-m-error"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                >
                  should match format P1D(ays)T2H(ours)3M(inutes)1S(econds)
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__group"
        data-testid="wrapper-field"
      >
        <div
          class="pf-v5-c-form__group-label"
        >
          <label
            class="pf-v5-c-form__label"
            for="uniforms-0002-0007"
          >
            <span
              class="pf-v5-c-form__label-text"
            >
              yearsAndMonthDuration
            </span>
          </label>
           
        </div>
        <div
          class="pf-v5-c-form__group-control"
        >
          <span
            class="pf-v5-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="uniforms text field"
              data-ouia-component-id="OUIA-Generated-TextInputBase-12"
              data-ouia-component-type="PF5/TextInput"
              data-ouia-safe="true"
              data-testid="text-field"
              id="uniforms-0002-0007"
              name="yearsAndMonthDuration"
              placeholder=""
              type="text"
              value=""
            />
          </span>
          <div
            class="pf-v5-c-form__helper-text"
          >
            <div
              class="pf-v5-c-helper-text"
            >
              <div
                class="pf-v5-c-helper-text__item"
              >
                <span
                  class="pf-v5-c-helper-text__item-text"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
